# local-sqa-llm

./: .gitignore  .pre-commit-hooks.yaml  README.md  setup.cfg
local_sqa_llm/: main.py
tests/: sample_python_file_for_testing.py
