# setup.cfg
[metadata]
name = local-sqa-llm
description = software quality assurance through locally run LLMs
version = 0.0.1
author = Andreas Wieltsch
author_email = acw@gmail.com
license = Apache
url = https://github.com/anwielts/local-sqa-llm

[options]
packages = find:

[options.entry_points]
console_scripts =
     local-sqa-llm = local_sqa_llm.main:main